nodejs-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-fe
  template:
    metadata:
      labels:
        app: nodejs-fe
    spec:
      containers:
      - name: nodejs-fe-sha256-1
        image: us-central1-docker.pkg.dev/vnynse1/dev/nodejs-fe:7a2d906 
        ports:
        - containerPort: 4200
        
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-fe
spec:
  type: NodePort 
  selector:
    app: nodejs-fe
  ports:
  - port: 80
    targetPort: 4200
    protocol: TCP
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-fe-ingress
  annotations:
    #kubernetes.io/ingress.global-static-ip-name: nginx-example
    networking.gke.io/managed-certificates: nodejs-fe-managed-certificates
    
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: nodejs-fe
            port:
              number: 80 
---
