staging-ingress-fe.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  annotations:
    #kubernetes.io/ingress.global-static-ip-name: nginx-example
    #kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: staging-mc-fe 
spec:
  defaultBackend:
    service:
      name: nodejs-fe-service
      port:
        number: 80
  rules:
  - http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: nodejs-fe-service
              port:
               number: 80
